--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,12 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.litigy.lint.android"
+        applicationId "ng.agrimart.android"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "0.1.0-mockingbird01"
-        setProperty("archivesBaseName", "Lint-$versionName")
+        setProperty("archivesBaseName", "Agrimart-$versionName")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -146,11 +146,8 @@ dependencies {
     implementation 'com.yqritc:android-scalablevideoview:1.0.4'
 
     // Testing
-    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
-    testImplementation 'org.robolectric:robolectric:4.2'
+
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    testImplementation('androidx.test:core:1.3.0')
     testImplementation 'com.android.support.test:rules:1.0.2'
     testImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -159,5 +156,11 @@ dependencies {
     // Optional -- UI testing with UI Automator
     androidTestImplementation('androidx.test.uiautomator:uiautomator:2.2.0')
 
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.2'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
+    testImplementation group: 'org.mockito.kotlin', name: 'mockito-kotlin', version: '3.2.0'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.2'
 
 }
