--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:name="android.permission.AUTHENTICATE_ACCOUNTS"
         android:maxSdkVersion="22" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:name="ng.agrimart.android.core.AgrimartApplication"
@@ -45,8 +47,6 @@
         </activity>
         <activity android:name="ng.agrimart.android.view.auth.AuthActivity" />
         <activity android:name="ng.agrimart.android.view.passwordReset.PasswordResetActivity" />
-        <activity android:name="ng.agrimart.android.view.emailVerification.EmailVerificationActivity" />
-        <activity android:name="ng.agrimart.android.view.passcode.setup.PasscodeSetupActivity" />
     </application>
 
 </manifest>
