--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
     def dagger_version = "2.35.1"
+    def paging_version = "2.1.2"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -82,9 +83,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation 'me.farahani.spaceitemdecoration:spaceitemdecoration:1.0'
 
     // Retrofit for consuming API's
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
