--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 31
+//    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ng.agrimart.android"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "0.1.0-mockingbird01"
         setProperty("archivesBaseName", "Agrimart-$versionName")
@@ -90,11 +90,12 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation 'me.farahani.spaceitemdecoration:spaceitemdecoration:1.0'
+    implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
 
     // Retrofit for consuming API's
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     // Reactive Java (RX)
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
@@ -119,7 +120,7 @@ dependencies {
 
     implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
     implementation 'androidx.activity:activity-ktx:1.2.3'
-    implementation("androidx.fragment:fragment-ktx:1.3.4")
+    implementation 'androidx.fragment:fragment-ktx:1.3.4'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
