--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
 
     <application
         android:name="ng.agrimart.android.core.AgrimartApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -38,7 +39,8 @@
         </service>
 
         <activity android:name="ng.agrimart.android.view.landing.LandingPageActivity" />
-        <activity android:name="ng.agrimart.android.view.launch.SplashScreenActivity">
+        <activity android:name="ng.agrimart.android.view.launch.SplashScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
